k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookshop-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookshop-app
  template:
    metadata:
      labels:
        app: bookshop-app
    spec:
      containers:
        - name: app
          image: bakr458/bookshop-app:latest
          ports:
            - containerPort: 8003
