k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookshop-service
spec:
  selector:
    app: bookshop-app
  ports:
    - port: 8003
      targetPort: 8003
  type: NodePort
