k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookshop-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bookshop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookshop-service
                port:
                  number: 8003
